[project]
name = "flaskr"
version = "1.0.0"
dependencies = [
    "flask",
]

[tool.setuptools]
py-modules = ["flaskr"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]